--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
   font-family: "Oxygen", sans-serif;
-  background-color: black;
+  background-color: #1b1b1b;
   color: gainsboro;
 }
 li {
@@ -13,7 +13,9 @@ li {
   margin: 0 10px;
   cursor: pointer;
   padding: 7px;
-  border-radius: 10px;
+  border-radius: 5px;
+  transition: all 0.3s;
+
 }
 li:hover {
   color: #031842;
@@ -22,7 +24,7 @@ li:hover {
 }
 .logo {
   /* font-size: 30px; */
-  margin: 0 8px 0 0;
+  margin: 0 5px;
   cursor: pointer;
   width: 28px;
 }
@@ -30,12 +32,14 @@ li:hover {
 .firstcontainer {
   display: flex;
   align-items: center;
+  font-weight: bold;
+
 }
 .main-container {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding: 15px 0;
+  justify-content: space-between;
+  padding: 10px 0;
   border-top: 1px solid gainsboro;
   border-bottom: 1px solid gainsboro;
 }
@@ -48,9 +52,11 @@ li:hover {
   cursor: pointer;
   border-radius: 5px;
   font-size: 14px;
+  transition: all 0.3s;
 }
 .signup {
-  padding: 5px 23px;
+  padding: 8px 23px;
+  margin: 0 10px;
   border-radius: 5px;
   border: 1px solid;
   background-color: white;
@@ -60,6 +66,9 @@ li:hover {
 }
 .signup:hover {
   background-color: rgb(202, 198, 198);
+}
+button {
+  font-weight: bold;
 }
 
 .theme:hover {
@@ -71,10 +80,11 @@ input {
   border: 1px solid;
   border-radius: 20px;
   width: 70px;
+  transition: width 0.4s;
 }
 input:focus {
   /* background-color: black; */
-  width: 150px;
+  width: 200px;
   border: 1px solid black;
 }
 sup {
@@ -92,6 +102,91 @@ sup {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 30px;
+  margin: 8px;
   cursor: pointer;
+}
+i.bar-icon{
+  display: none;
+  margin-right: 50px;
+  cursor: pointer;
+}
+.info{
+  text-align: center;
+  margin: 18px;
+  font-weight: bold;
+  background-color: #313131 !important;
+}
+span.ai-help{
+  color: #aa72af;
+  cursor: pointer;
+}
+span.ai-help:hover{
+  text-decoration: underline;
+}
+
+.main-background{
+  position: relative;
+  height: 70vh;
+  background-image: url(./Asstes/background.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* filter: brightness(50%);  */
+  /* filter: grayscale(100%); */
+}
+.main-heading{
+  z-index: 1;
+  position: absolute;
+  background: none;
+  left: 270px;
+  top: 30px;
+  font-size: 40px;
+  font-weight: lighter;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+}
+.Developers-span{
+  z-index: 1;
+  background: none;
+  text-decoration: underline #8cb4ff 2.5px;
+  color: white;
+  font-weight: lighter;
+  font-family: 'Poppins', sans-serif;
+}
+.sub-heading{
+  position: absolute;
+  background: none;
+  left: 270px;
+  top: 200px;
+  font-size: 20px;
+  font-weight: lighter;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+
+}
+@media only screen and (max-width: 1200px){
+  i.bar-icon{
+    display: inline-block;
+  }
+  .second-container{
+    display: none;
+  }
+}
+@media only screen and (max-width: 750px){
+    ul{
+      display: none;
+    }
+    .firstcontainer{
+      display: flex;
+      justify-content: center;
+      align-items: end;
+      width: 100%;
+      font-size: 1000px;
+    }
+    .logo{
+      width: 70px;
+    }
+    .logo-text {
+      font-size: 70px;
+    }
 }
